# chanlun.rs

./: .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  chan.py  chan.py-skill.md  check_license.py  clean_install.sh  main.py  strategies.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: publish-crates.yml  publish.yml
chanlun/: Cargo.toml  README.md
chanlun-py/: .gitignore  Cargo.toml  README.md  build.rs  build.sh  bump_version.py  chanlun.pyi  pyproject.toml  test_integration.py
chanlun-py/chanlun/: __init__.py  __init__.pyi  chan.py  chan_external.py  indicators.py  parse.py  parse.pyi  signal_orchestrator.py  termcolor.py
chanlun-py/chanlun/signals/: __init__.py  _template.py  demo.py
chanlun-py/src/: algorithm_py.rs  business_py.rs  cache.rs  config_py.rs  equality_py.rs  indicators_py.rs  kline_py.rs  lib.rs  signal_engine_py.rs  signal_py.rs  structure_py.rs  types_py.rs
chanlun-py/tests/: btcusd-300-1777649100-1778398800.nb  test_all.py  test_identity.py  test_position_update.py  test_signal_primitives.py
chanlun-py/tests/helpers/: __init__.py  api_consistency.py  rc_identity.py  subclass.py  type_shape.py
chanlun-signal-macros/: Cargo.toml
chanlun-signal-macros/src/: lib.rs
chanlun/src/: config.rs  lib.rs  log.rs  main.rs
chanlun/src/algorithm/: bi.rs  divergence.rs  hub.rs  mod.rs  segment.rs
chanlun/src/business/: bsp.rs  mod.rs  multi_frame.rs  observer.rs  synthesizer.rs
chanlun/src/indicators/: boll.rs  calculator.rs  container.rs  kdj.rs  macd.rs  mod.rs  rsi.rs
chanlun/src/kline/: bar.rs  chan_kline.rs  mod.rs
chanlun/src/signal/: engine.rs  event.rs  factor.rs  ffi.rs  mod.rs  operate.rs  params.rs  position.rs  registry.rs  registry_macro_test.rs  signal.rs
chanlun/src/signal/functions/: demo.rs  mod.rs
chanlun/src/structure/: dash_line.rs  feat_fractal.rs  fractal_obj.rs  mod.rs  segment_feat.rs
chanlun/src/types/: bsp_type.rs  direction.rs  fractal.rs  gap.rs  mod.rs  sync_f64.rs
chanlun/src/utils/: datetime.rs  format.rs  mod.rs
docs/: api.md  conf.py  index.md  requirements.txt
docs/superpowers/plans/: 2026-06-22-signal-primitives-to-rust-core.md  2026-06-22-signal-registry-framework.md  2026-06-23-position-update-state-machine.md  2026-06-23-signal-calculator-migration.md  2026-06-23-signal-fn-api-and-port.md
docs/superpowers/specs/: 2026-06-22-signal-primitives-to-rust-core-design.md  2026-06-22-signal-registry-framework-design.md  2026-06-23-full-signal-migration-evaluation.md  2026-06-23-position-update-state-machine-design.md  2026-06-23-signal-calculator-migration-design.md  2026-06-23-signal-fn-api-and-port-design.md
examples/plugin-demo/: Cargo.toml
examples/plugin-demo/src/: lib.rs
templates/: index.html
