[package]
name = "chanlun-py"
version = "26.5.101"
edition = "2021"
description = "缠论技术分析库 — Rust 高性能 Python 绑定"
authors = ["YuYuKunKun"]
license = "MIT"
repository = "https://github.com/YuYuKunKun/chanlun.rs"

[lib]
crate-type = ["cdylib"]
name = "chanlun"

[dependencies]
chanlun = "26.5.5" # { path = "../chanlun" }
pyo3 = { version = "0.28", features = ["experimental-inspect"] }
serde_json = "1"
chrono = "0.4"
