[package]
name = "chanlun-py"
version = "26.6.47"
edition = "2024"
description = "缠论技术分析库 — Rust 高性能 Python 绑定"
authors = ["YuYuKunKun"]
license = "MIT"
repository = "https://github.com/YuYuKunKun/chanlun.rs"

[lib]
crate-type = ["cdylib"]
name = "chanlun"

[dependencies]
chanlun = "26.6.3" # { path = "../chanlun" }
lru = "0.18"
pyo3 = { version = "0.28", features = ["experimental-inspect"] }
serde_json = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi", "std", "registry"] }
tracing-core = "0.1"
