[package]
name = "chanlun"
version = "26.5.6"
edition = "2021"
rust-version = "1.70"
license = "MIT"
description = "基于缠论（缠中说禅）理论的量化技术分析核心库，支持流式数据处理和多周期联立分析。"
readme = "README.md"
repository = "https://github.com/YuYuKunKun/chanlun.rs"
keywords = ["trading", "finance", "technical-analysis", "quant", "chanlun"]
categories = ["algorithms", "finance", "science"]
homepage = "https://github.com/YuYuKunKun/chanlun.rs"
documentation = "https://docs.rs/chanlun/"
authors = ["YuYuKunKun"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
byteorder = "1"
chrono = { version = "0.4", features = ["serde"] }
